[workspace]
members = [
  "lib/*",
]

[package]
name = "tx-mx"
license = "MIT"
version = "0.0.1"
authors = ["Francesco Cina <ufoscout@gmail.com>"]
description = "ACID Transactional Storage with transparent Optimistic Lock support."
edition = "2021"
homepage = "https://github.com/ufoscout/tx-mx"
repository = "https://github.com/ufoscout/tx-mx"
keywords = ["acid", "storage", "map", "transaction", "IC", "Internet Computer"]

[dependencies]
candid = "0.8"
#log = "0.4"
serde = "1.0"
thiserror = "1.0.37"