[workspace]
members = [
  "lib/*",
]

[package]
name = "ic_tx"
license = "MIT"
version = "0.0.1"
authors = ["Francesco Cina <ufoscout@gmail.com>"]
description = "ACID Transactional Storage with transparent Optimistic Lock support."
edition = "2021"
homepage = "https://github.com/ufoscout/ic_tx"
repository = "https://github.com/ufoscout/ic_tx"
keywords = ["acid", "storage", "transaction", "IC", "internet-computer"]

[dependencies]
candid = { version = "0.8", optional = true }
#log = "0.4"
serde = { version = "1.0", features = ["derive"], optional = true }
thiserror = "1.0.37"

[features]
default = []
candid = ["dep:candid", "serde"]
serde = ["dep:serde"]