[workspace]
members = [
  "src/*",
]

[workspace.package]
name = "ic_tx_parent"
license = "MIT"
version = "0.1.0"
authors = ["Francesco Cina <ufoscout@gmail.com>"]
description = "ACID Transactional Storage with transparent Optimistic Lock support."
edition = "2021"
homepage = "https://github.com/ufoscout/ic_tx"
repository = "https://github.com/ufoscout/ic_tx"
keywords = ["acid", "storage", "transaction", "IC", "internet-computer"]

[workspace.dependencies]
ic_tx = { path = "./src/ic_tx"}
test_canister_a = { path = "./src/test_canister_a" }
test_canister_b = { path = "./src/test_canister_b" }

candid = { version = "0.10" }
futures = "0.3"
ic-cdk = { version = "0.17" }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tokio = {version = "1", features = ["rt", "macros"]}
