[package]
name = "test_canister_a"
license = "MIT"
version = "0.0.1"
authors = ["Francesco Cina <ufoscout@gmail.com>"]
description = "ACID Transactional Storage with transparent Optimistic Lock support."
edition = "2021"
homepage = "https://github.com/ufoscout/ic_tx"
repository = "https://github.com/ufoscout/ic_tx"
keywords = ["acid", "storage", "map", "transaction", "IC", "Internet Computer"]

[dependencies]
candid = "0.8"
ic-exports = { git = "https://github.com/infinity-swap/canister-sdk", package = "ic-exports", tag = "v0.3.26" }
ic-canister = { git = "https://github.com/infinity-swap/canister-sdk", package = "ic-canister", tag = "v0.3.26" }
ic-storage = { git = "https://github.com/infinity-swap/canister-sdk", package = "ic-storage", tag = "v0.3.26" }
ic-cdk = "0.6"
serde = "1"
test_canister_b = { path = "../test_canister_b" }
ic_tx = { path = "../../", features = ["candid"]}

[features]
default = ["export-api"]
export-api = []