[package]
name = "ic_tx"

authors.workspace = true
homepage.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
candid = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
thiserror = { workspace = true }

[features]
default = []
candid = ["dep:candid", "serde"]
serde = ["dep:serde"]