[package]
name = "test_canister_a"

authors.workspace = true
homepage.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic_tx = { workspace = true, features = ["candid"] }
serde = { workspace = true }

[dev-dependencies]
futures = { workspace = true }
ic_mple_client = { workspace = true, features = ["pocket-ic"] }
ic_mple_pocket_ic = { workspace = true }
tokio = { workspace = true }
